# parabox-solver

./: .gitignore  Cargo.toml  README.md
src/: fmt.rs  lib.rs  main.rs  parse.rs  solve.rs
tests/: common.rs  move.rs  solve.rs
tests/move/: 0000-simple-move.map  0001-push-box.map  0002-push-out.map  0003-enter.map  0004-multiple-enter.map  0005-eat-order.map  0006-eat-enter.map  0007-multiple-eat.map
tests/solve/: challenge2.map
