[package]
name = "parabox-solver"
version = "0.1.0"
edition = "2021"
autotests = false

[[test]]
name = "move"
path = "tests/move.rs"
harness = false

[[test]]
name = "solve"
path = "tests/solve.rs"
harness = false

[dependencies]
anyhow = "1.0.68"
console = "0.15.2"
indicatif = "0.17.2"
rayon = "1.6.1"
