[package]
name = "parabox-solver"
version = "0.1.0"
edition = "2021"
autotests = false

[[test]]
name = "move"
path = "tests/move.rs"
harness = false

[[test]]
name = "solve"
path = "tests/solve.rs"
harness = false

[dependencies]
anyhow = "1.0.68"
arrayvec = "0.7.2"
console = "0.15.2"
fxhash = "0.2.1"
indexmap = "1.9.2"
indicatif = "0.17.2"
rayon = "1.6.1"

[dependencies.coz]
version = "0.1.3"
optional = true

[profile.release]
# debug = 1 # For benching.
